aa.rb only runs R if the _unrooted.txt file hasn't been created yet

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ tmp
 .yardoc
 _yardoc
 doc/
+
+codeml_files/newick_trees_processed/1842_39/.DS_Store
+
+codeml_files/newick_trees_processed/39_0/.DS_Store
+
+codeml_files/newick_trees_processed/.DS_Store
